--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 tokio = { version = "1.0.1", features = ["full"] }
 lazy_static = "1.4.0"
 num_enum = "0.5.1"
+async-trait = "0.1.51"
 log = "0.4.14"
 log4rs = "1.0.0"
