--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "mqtt_demo"
+name = "mqtt"
 version = "0.1.0"
-authors = ["kumatata <chinagxwei@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
